# rust-book-notes

./: README.md
adder/: README.md
adder/src/: lib.rs
minigrep/src/: lib.rs  main.rs
restaurant/src/: lib.rs
rust-book/add/: Cargo.toml
rust-book/add/add_one/: Cargo.toml
rust-book/add/adder/: Cargo.toml
rust-book/adder/src/: lib.rs
rust-book/adder/tests/: integration_test.rs
rust-book/hello/: hello.html
rust-book/hello/src/: lib.rs  main.rs
rust-book/hello_macro/hello_macro_derive/: Cargo.toml
rust-book/minigrep/src/: lib.rs
rust-book/restaurant/src/: front_of_house.rs
rust-book/the_book/: Cargo.toml
rust-book/the_book/src/: advanced_functions_and_closures.rs  advanced_traits.rs  advanced_types.rs  box_pointer.rs  characteristics_of_oops.rs  closures.rs  comments.rs  deref_trait.rs  drop_trait.rs  functions.rs  generic_data_types.rs  hello_world.rs  if_let.rs  macros.rs  main.rs  method_syntax.rs  oop_design_pattern.rs  panic_or_not.rs  pattern_syntax.rs  patterns_use_cases.rs  rc_smart_pointer.rs  refcell_smart_pointer.rs  reference_cycles.rs  refutability_in_patterns.rs  shared_state_concurrency.rs  slice_type.rs  strings.rs  structs.rs  sync_and_send.rs  threads.rs  trait_objects.rs  traits.rs  unsafe_rust.rs  vectors.rs
the_book/: Cargo.toml
the_book/src/: closures.rs  comments.rs  control_flow.rs  data_types.rs  enums.rs  guessing_game.rs  hashmaps.rs  iterators.rs  main.rs  match_control_flow.rs  ownership.rs  recoverable_errors.rs  references.rs  references_and_lifetimes.rs  struct_by_example.rs  unrecoverable_errors.rs  variables.rs
(+2 files in other folders)
