[package]
name = "the_book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"


#  Cargo has default settings for each of the profiles that apply when you haven't explicitly added any [profile.*] sections in the project’s Cargo.toml file. By adding [profile.*] sections for any profile you want to customize, you override any subset of the default settings. 
# for eg:
[profile.dev]
opt-level =0 # default opt-level for dev =0 

[profile.release]
opt-level=2 # The opt-level setting controls the number of optimizations Rust will apply to your code, with a range of 0 to 3.
# default opt-level for release = 3